Fixed clipping issues

--- a/talent_calc/style.css
+++ b/talent_calc/style.css
@@ -75,10 +75,8 @@ body{
   .panel{
     /*Swaps sides of column layout back to normal*/
     direction: ltr;
-    /*grid-column: span 2;
-    /*grid-template-rows: var(--header-height) auto; 1vh = the header, auto = footer + body */
-    height: 100vh; 
-    max-height: 875px;
+    height: 100%; 
+    /* max-height: 875px; */
 
   }
 }
@@ -97,13 +95,14 @@ body{
   .panel-body{
     display:grid;
     grid-template-columns: 1fr 3fr;
+    justify-content: auto;
+    align-content: auto;
     /* direction:ltr; */
     /* width: 100vw; */
     /* grid-template-columns: 10vw auto; */
     
   }
 }
-
 
 header{
   display: grid;
@@ -147,7 +146,7 @@ header > .resourceCounter{
 }
 */
 .classIcon{
-  height: 10vh;
+  height: 100%;
   width: auto;
   z-index: 2;
   cursor: pointer;
@@ -248,8 +247,9 @@ header > .resourceCounter{
 @media only screen and (min-width: 600px) {
   .trees.talents{
     /*Display all trees*/
-    grid-template-columns: repeat(3, 300px);
-    max-height: 90vh;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    /* max-height: 100vh; */
     /* justify-items:center; */
     justify-content:center;
   }
@@ -319,9 +319,7 @@ header > .resourceCounter{
 
   grid-template-columns: repeat(4, minmax(48px,1fr)); /*change back to 1fr*/
   grid-template-rows: repeat(11, minmax(48px,1fr));  
- 
-  /* justify-items: center;
-  align-items: center; */
+
   /* box-shadow:  inset 0 0 20px 10px #000000; */
 }
 
